Aug  1 2009 pjp <pj.pandit@yahoo.co.in>

	* README:
	* readme.ms: version changed to 1.05.3

	* Makefile.am:
	* Makefile.in: dnstrace tinydns tinydns-data tinydns-edit and
	  tinydns-get moved to bin_PROGRAMS. Also files common.[ch] added
	  to targets such as tinydns, walldns, pickdns, rbldns etc.

	* common.c: New file added to hold functions like read_conf() and
	  handle_term() etc. These functions are called from all *dns and from
	  the dnscache program.

	* common.h: declares functions defined in common.c

	* djbdns.sh: debug level for dnscache changed to -d3 from -d2.

	* dns.h: added the copyright disclaimer to the top.

	* dns_dfd.c:
	* dnsfilter.c:
	* dns_domain.c:
	* dns_random.c: formatted to a more conventional coding style and did
	  add the copyright disclaimer at the top.

	* dnscache.c: few common functions like read_conf(), handle_term() etc
	  are moved to common.c and the same is now linked with dnscache.

	* server.c:
	* dnstxt.c:
	* dnsname.c:
	* dnstrace.c:
	* socket_send.c: formatted to a more conventional coding style; Did
	  add couple of functions to process options and print help; Also wrote
	  the copyright disclaimer at the top.

	* etc/tinydns-conf: New file introduced to hold configuration of tinydns
	  program.

	* etc/Makefile.am:
	* etc/Makefile.in: Added tinydns-conf to conf_DATA and EXTRA_DIST for
	  installation and distribution.

	* rbldns.c:
	* pickdns.c:
	* walldns.c: definition: `short debug_level = 0;' moved to server.c

	* tinydns.c:
	* tinydns-get.c:
	* tinydns-data.c:
	* tinydns-edit.c: formatted to a more conventional coding style; Did
	  add couple of functions to process options and print help; Also wrote
	  the copyright disclaimer at the top.

	* version.h: version string changed to: 1.05.3 

	My email address changed to <pj.pandit@yahoo.co.in>

Apr 15 2009 pjp <pj.pandit@yahoo.co.in>

	* dnsfilter.ms: new manual page for dnsfilter.

	* Makefile.am: dnsfilter moved to bin_PROGRAMS, and added manual page