@@ -1,0 +1,54 @@
+\"
+\" djbdns.1: This is a manuscript of the manual page for `djbdns'. This file
+\" is part of the `djbdns' project version 1.05.3 and later.
+\"
+
+\" No hyphenation
+.hy 0
+.nr HY 0
+
+.TH djbdns 1
+
+.SH NAME
+\fBdjbdns\fR - djbdns DNS tools
+
+.SH DESCRIPTION
+.PP
+\fBdjbdns\fR is a collection of DNS tools, originally written by Dr D J
+Bernstein. This release of djbdns includes the following ones
+
+.IP "+ dnscache"
+
+.IP "+ dnsfilter"
+
+.IP "+ dnsip"
+
+.IP "+ dnsipq"
+
+.IP "+ dnsmx"
+
+.IP "+ dnsname"
+
+.IP "+ dnsq"
+
+.IP "+ dnsqr"
+
+.IP "+ dnstrace"
+
+.IP "+ dnstracesort"
+
+.IP "+ dnstxt"
+
+.IP "+ tinydns"
+
+.IP "+ tinydns-data"
+
+.IP "+ tinydns-edit"
+
+.IP "+ tinydns-get"
+
+.SH BUGS
+Report bugs to <pj.pandit@yahoo.co.in>
+
+.SH AUTHOR
+Prasad J Pandit
